// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconfacebook sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-facebook"
  bbHeight={50}
  bbWidth={25}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={14}
  minY={10}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 25,
    }
  }
  title="Facebook Icon"
  vbHeight={20.397258758544922}
  vbWidth={10.592460632324219}
  width={25}
/>
`;

exports[`2. iconforwardarrow sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-forward-arrow"
  bbHeight={50}
  bbWidth={29.166666666666668}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={42}
  minY={12}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 29,
    }
  }
  vbHeight={120}
  vbWidth={60}
  width={29.166666666666668}
/>
`;

exports[`3. iconstar sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-save-star"
  bbHeight={50}
  bbWidth={50}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 50,
    }
  }
  title="Save star"
  vbHeight={18}
  vbWidth={18}
  width={50}
/>
`;

exports[`4. iconcopylink sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-copy-link"
  bbHeight={50}
  bbWidth={15}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 15,
    }
  }
  title="Copy link to clipboard"
  vbHeight={15}
  vbWidth={15}
  width={15}
/>
`;

exports[`5. iconsavebookmark sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-save-bookmark"
  bbHeight={50}
  bbWidth={12}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 12,
    }
  }
  title="Save to My Articles"
  vbHeight={16}
  vbWidth={12}
  width={12}
/>
`;

exports[`6. icontwitter sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-twitter"
  bbHeight={50}
  bbWidth={62.5}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={-354.2}
  minY={-279.4}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 62,
    }
  }
  title="Twitter Icon"
  vbHeight={600}
  vbWidth={750}
  width={62.5}
/>
`;

exports[`7. iconvideo sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-video"
  bbHeight={50}
  bbWidth={85}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 85,
    }
  }
  title="Video Icon"
  vbHeight={40}
  vbWidth={68}
  width={85}
/>
`;

exports[`8. iconvideo360player sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-video-360-player"
  bbHeight={50}
  bbWidth={54}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 54,
    }
  }
  title="Video 360 Player Icon"
  vbHeight={100}
  vbWidth={108}
  width={54}
/>
`;

exports[`9. thestlogo sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="logo-the-sunday-times"
  bbHeight={50}
  bbWidth={50}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 50,
    }
  }
  title="ST"
  vbHeight={20}
  vbWidth={29}
  width={50}
/>
`;

exports[`10. thetimeslogo sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="logo-the-times"
  bbHeight={50}
  bbWidth={50}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 50,
    }
  }
  title="The Times"
  vbHeight={20}
  vbWidth={20}
  width={50}
/>
`;

exports[`11. closeicon sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  aria-label="icon-close"
  bbHeight={50}
  bbWidth={28}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "width": 28,
    }
  }
  title="Close Icon"
  vbHeight={28}
  vbWidth={28}
  width={28}
/>
`;

exports[`12. closeroundicon sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height="24"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 24,
      "width": 24,
    }
  }
  vbHeight={24}
  vbWidth={24}
  width="24"
/>
`;

exports[`13. glassmagnifiericon sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height="24"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 24,
      "width": 24,
    }
  }
  vbHeight={24}
  vbWidth={24}
  width="24"
/>
`;

exports[`14. leftchevron sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="24"
  bbWidth="24"
  fill="none"
  focusable={false}
  height="24"
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 24,
      "width": 24,
    }
  }
  vbHeight={24}
  vbWidth={24}
  width="24"
/>
`;
